--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/game-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Tic-Tac-Toe</title>
+    <title>React Noughts and Crosses</title>
   </head>
   <body>
     <header>
       <img src="game-logo.png" alt="Hand drawn tic tact toe board">
-      <h1>Tic-Tac-Toe</h1>
+      <h1>Noughts and Crosses!</h1>
     </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
